<resources>
    <string name="app_name">Outlook Mobile</string>
    <string name="action_logout">Log Out</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Log In</string>
    <string name="sign_in_request">Please sign in to use this app.</string>
    <string name="continue_offline">Continue Offline</string>

    <string name="welcome">Welcome, %1$s!</string>
    <string name="inbox">Inbox</string>
    <string name="attachment">Attachment</string>
    <string name="add_attachment">Adding attachment</string>
    <string name="no_subject">(No subject)</string>
    <string name="no_message">(No message)</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="search_field">Search&#8230;</string>
    <string name="speech_text">What do you want to search for?</string>
    <string name="no_email">No emails found</string>
    <string name="folders">Mailfolders</string>
    <string name="title_activity_mail_other">MailActivityOther</string>
    <string name="concept">Concept Message</string>
    <string name="not_found">Not found</string>
    <string name="from">From</string>
    <string name="from_email">From email</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="subject">Subject</string>
    <string name="action_back">Go back</string>
    <string name="action_changefolder">Change folder</string>
    <string name="action_reply">Reply</string>
    <string name="action_reply_all">Reply all</string>
    <string name="action_forward">Forward</string>


    <!--
        Main calendar view strings
    	-->

    <string name="current_month_string">This month</string>
    <string name="current_year_string">This Year</string>
    <string name="month_tableheader_monday">M</string>
    <string name="month_tableheader_tuesday">T</string>
    <string name="month_tableheader_wednesday">W</string>
    <string name="month_tableheader_thursday">T</string>
    <string name="month_tableheader_friday">F</string>
    <string name="month_tableheader_saturday">S</string>
    <string name="month_tableheader_sunday">S</string>
    <string name="month_create_event_button">Create new event</string>
    <string name="tab_month">Month</string>
    <string name="tab_week">Week</string>
    <string name="tab_day">Day</string>
    <string name="current_week_string">This week</string>
    <string name="current_day_string">Today</string>
    <string name="no_events_message">No events found for this date</string>
    <string name="calendar_title">Calendar</string>


    <!--
        Error messages (toasts)
    -->

    <string name="alert_folder_title">Confirm move to new folder</string>
    <string name="alert_folder_message">Are you sure you want to move this email?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="move_failed">Move email failed</string>
    <string name="move_succeed">Email moved</string>
    <string name="alert_delete_title">Deleting email(s)</string>
    <string name="alert_delete_message">Are you sure you want to delete this email?</string>
    <string name="alert_delete_message_multiple">Are you sure you want to delete these emails?</string>
    <string name="attachment_error">Failed to retrieve attachment</string>
    <string name="attachment_saved">Attachment saved in download folder</string>
    <string name="attachment_saved_failed">Failed saving attachment</string>
    <string name="delete_succes">Email(s) deleted</string>
    <string name="delete_nosucces">Failed to delete email(s)</string>
    <string name="delete_succes_contacts">Contact(s) deleted</string>
    <string name="delete_nosucces_contacts">Failed to delete contact(s)</string>
    <string name="text_email">Email</string>
    <string name="text_calendar">Calendar</string>
    <string name="text_contacts">Contacts</string>
    <string name="folder_error">Couldn\'t find folders</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="contacts_title">Contacts</string>
    <string name="no_contacts">No contacts found, add a new contact</string>
    <string name="alert_delete_title_contacts">deleting contact(s)</string>
    <string name="alert_delete_contacts_multiple">Are you sure you want to delete these contacts?</string>
    <string name="alert_delete_contact">Are you sure you want to delete this contact?</string>


    <!--
        CONTACTS
    -->

    <string name="displayname">Displayname </string>
    <string name="givenname">Given name </string>
    <string name="initials">Initials </string>
    <string name="middlename">Middlename</string>
    <string name="nickname">Nickname </string>
    <string name="surname">Surname </string>
    <string name="title">Title </string>
    <string name="companyname">Companyname </string>
    <string name="jobtitle">Jobtitle </string>
    <string name="department">Department </string>
    <string name="officelocation">Officelocation </string>
    <string name="profession">Profession </string>
    <string name="businesshomepage">Businesshomepage </string>
    <string name="assistantname">Assistantname </string>
    <string name="manager">Manager </string>
    <string name="homephones">Home phones</string>
    <string name="mobilephone">Mobile phone </string>
    <string name="businessphones">Business phones </string>
    <string name="spousename">Spousename: </string>
    <string name="emailaddresses">Emailaddress </string>
    <string name="birthday">Birthday </string>
    <string name="personalnotes">Personal note</string>
    <string name="homeaddress">Home address</string>
    <string name="businessaddress">Business address</string>
    <string name="otheraddress">Other address</string>
    <string name="homestreet">Homestreet</string>
    <string name="homecountry">Homecountry</string>
    <string name="businessstreet">Business street</string>
    <string name="businesscountry">Business country</string>
    <string name="otherstreet">Other street</string>
    <string name="othercountry">Other country</string>
    <string name="action_edit">Edit contact</string>
    <string name="action_save">Save contac</string>
    <string name="action_cancel_edit">Cancel edit</string>
    <string name="edit">Edit</string>
    <string name="Info">General Information</string>
    <string name="info">General Information</string>
    <string name="businessInfo">Business Info</string>
    <string name="phonesInfo">Phonenumbers</string>
    <string name="emailaddressInfo">Emailaddress</string>
    <string name="addresses">Addresses</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="add_contact">Add Contact</string>
    <string name="Userinfo">User info</string>
    <string name="Generalinfo">General info</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="postalcode">Postalcode</string>
    <string name="state">State</string>
    <string name="countryorregion">Country</string>
    <string name="email">Email</string>
    <string name="btnRemove">Remove</string>
    <string name="add_error">Couldn\'t retrieve all the values</string>
    <string name="date_wrong_format">Date is in wrong format</string>
    <string name="invalidEmail">Email is invalid</string>
    <string name="fill_name">Given name or surname is required</string>
    <string name="email_invalid">Not a valid email</string>
    <string name="wrong">Something went wrong</string>
    <string name="alert_add_contact">Adding a new contact</string>
    <string name="alert_add">Are you sure you want to add this contact?</string>
    <string name="title_activity_contact_detail">ContactDetailActivity</string>
    <string name="invalidPhone">Invalid phonenumber</string>
    <string name="homephone">Home phone</string>
    <string name="businessphone">Business phone</string>
    <string name="max2">Maximum 2 phone numbers are allowed</string>
    <string name="home">Home</string>
    <string name="Business">Business</string>
    <string name="Other">Other</string>
    <string name="email_wrong">Something went wrong! Please review your e-mail.</string>
    <string name="no_contacts_found">No contacts found!</string>
    <string name="sending_mail">Sending mail...</string>
    <string name="mail_sent">Mail sent!</string>
    <string name="no_address">No address information available</string>
    <string name="delete_email_first">Delete email text first!</string>
    <string name="delete_phone_first">First delete the phonenumber</string>
    <string name="emailEditText">emailEditText</string>
    <string name="homephoneEditText">homephoneEditText</string>
    <string name="businessphoneEditText">businessphoneEditText</string>
    <string name="error_edit_contact">Error while updating contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="alert_edit">Are you sure you want to edit this contact?</string>
    <string name="download_at"><![CDATA[Do you want to download & open the attachment?]]></string>
    <string name="alert_open_attach">Are you sure you want to open and download this attachment?</string>
    <string name="alert_info_attach">The file will be saved in your download folder</string>
    <string name="offline_error">This functionality is not supported in the offline version</string>
    <string name="login_first">Login at least 1 time to start using the app in offline mode</string>
    <string name="action_addmap">Add folder</string>
    <string name="add_newmap">Add a new folder</string>
    <string name="add_foldername">Enter foldername</string>
    <string name="folder_adderror">Error saving folder</string>


</resources>
