<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_email"
        android:enabled="true"
        android:icon="@drawable/ic_email_white_24dp"
        android:title="@string/text_email"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_calendar"
        android:enabled="true"
        android:icon="@drawable/ic_schedule_white_24dp"
        android:title="@string/text_calendar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_contacts"
        android:enabled="true"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/text_contacts"
        app:showAsAction="ifRoom" />
</menu>