<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:mContext="ap.student.outlook_mobile_app.mailing.activity.MailActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_whitevector_24dp"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_addmap"
        android:icon="@drawable/ic_change_folder_whitevector_24dp"
        android:orderInCategory="100"
        android:title="@string/action_addmap"
        app:showAsAction="never" />
</menu>
