<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:mContext="ap.student.outlook_mobile_app.contacts.activity.ContactDetailActivity">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_cancel_edit"
        android:icon="@drawable/ic_close_whitevector_24dp"
        android:orderInCategory="100"
        android:title="@string/action_cancel_edit"
        app:showAsAction="ifRoom" />
</menu>