<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ap.student.outlook_mobile_app.mailing.activity.ReadMailActivity"
    tools:layout_editor_absoluteY="25dp">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/barlayout_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_read"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:subtitleTextAppearance="@style/Toolbar.SubTitleText"
            app:titleTextAppearance="@style/Toolbar.TitleText">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/drawer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barlayout_read">

        <TextView
            android:id="@+id/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_read"
            android:minWidth="100dp"
            android:paddingLeft="@dimen/margin_read"
            android:text="@string/from"
            android:textColor="@color/from"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/from_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_read"
            android:paddingEnd="@dimen/fab_margin"
            android:paddingLeft="6dp"
            android:textAlignment="textStart"
            android:textColor="@color/from"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/from"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/from_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_read"
            android:minWidth="100dp"
            android:paddingLeft="@dimen/margin_read"
            android:text="@string/from_email"
            android:textColor="@color/from"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from" />

        <TextView
            android:id="@+id/from_email_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_read"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingEnd="@dimen/fab_margin"
            android:paddingLeft="6dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textColor="@color/from"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/from_email"
            app:layout_constraintTop_toBottomOf="@+id/from_content" />

        <TextView
            android:id="@+id/recepient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_read"
            android:minWidth="100dp"
            android:paddingLeft="@dimen/margin_read"
            android:text="@string/to"
            android:textColor="@color/from"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from_email" />

        <TextView
            android:id="@+id/recepient_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_read"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingEnd="@dimen/fab_margin"
            android:paddingLeft="6dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textColor="@color/from"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/recepient"
            app:layout_constraintTop_toBottomOf="@+id/from_email_content" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_read"
            android:minWidth="100dp"
            android:paddingLeft="@dimen/margin_read"
            android:text="@string/date"
            android:textColor="@color/from"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recepient" />

        <TextView
            android:id="@+id/date_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_read"
            android:paddingEnd="@dimen/fab_margin"
            android:paddingLeft="6dp"
            android:textAlignment="textStart"
            android:textColor="@color/from"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/date"
            app:layout_constraintTop_toBottomOf="@+id/recepient_content" />

        <TextView
            android:id="@+id/subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_read"
            android:minWidth="100dp"
            android:paddingLeft="@dimen/margin_read"
            android:text="@string/subject"
            android:textColor="@color/from"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <TextView
            android:id="@+id/subject_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_read"
            android:paddingEnd="@dimen/fab_margin"
            android:paddingLeft="6dp"
            android:textAlignment="textStart"
            android:textColor="@color/from"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/subject"
            app:layout_constraintTop_toBottomOf="@+id/date_content" />

        <WebView
            android:id="@+id/body_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_read"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subject_content" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
